gcc/testsuite/algol68/compile/error-mode-stropping-4.a68
# { dg-options "-fstropping=upper" }  #
BEGIN UNION (INT,REAL) j;
      j := "joo" { dg-error "CHAR.*UNION \\( *REAL *, *INT *\\)" }
END
